--- a/convert/Main.storyboard
+++ b/convert/Main.storyboard
@@ -23,14 +23,14 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="presentation" identifier="PianoSegue" id="gPV-vX-45r"/>
+                        <segue destination="BYZ-38-t0r" kind="presentation" identifier="PianoSegue" id="xOC-Me-dfS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aB8-lK-NNq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-855" y="247"/>
         </scene>
-        <!--Piano-->
+        <!--Pinao-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="PianoViewController" customModule="convert" customModuleProvider="target" sceneMemberID="viewController">
@@ -44,14 +44,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="music-staff" translatesAutoresizingMaskIntoConstraints="NO" id="Muf-zo-grY">
+                                <rect key="frame" x="-21" y="49" width="1066" height="222"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="music-staff" translatesAutoresizingMaskIntoConstraints="NO" id="JKC-Ym-GcZ">
+                                <rect key="frame" x="-21" y="219" width="1066" height="222"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="piano" translatesAutoresizingMaskIntoConstraints="NO" id="opj-OE-kU4">
                                 <rect key="frame" x="0.0" y="438" width="1024" height="330"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="music-staff" translatesAutoresizingMaskIntoConstraints="NO" id="Muf-zo-grY">
-                                <rect key="frame" x="-21" y="0.0" width="1066" height="222"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RmO-N2-2Ws">
                                 <rect key="frame" x="79" y="438" width="52" height="217"/>
@@ -217,10 +221,6 @@
                                     <action selector="Bbtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="38t-Iu-sjR"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="music-staff" translatesAutoresizingMaskIntoConstraints="NO" id="JKC-Ym-GcZ">
-                                <rect key="frame" x="-21" y="208" width="1066" height="222"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jyS-2V-YtU">
                                 <rect key="frame" x="735" y="633" width="68" height="127"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -284,8 +284,7 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Piano" image="Classic Music_000000_25" id="KvX-Ax-7Ex"/>
-                    <navigationItem key="navigationItem" id="UAL-QF-heE"/>
+                    <navigationItem key="navigationItem" title="Pinao" id="UAL-QF-heE"/>
                     <connections>
                         <outlet property="A" destination="Cto-XD-dMj" id="0hz-6y-hgs"/>
                         <outlet property="Ash" destination="2Je-ZP-jEg" id="jml-NJ-zEE"/>
@@ -312,11 +311,10 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-64.453125" y="222.65625"/>
+            <point key="canvasLocation" x="-6" y="247"/>
         </scene>
     </scenes>
     <resources>
-        <image name="Classic Music_000000_25" width="25" height="25"/>
         <image name="music-staff" width="700" height="163"/>
         <image name="piano" width="2862" height="1535"/>
     </resources>
